; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_wl_init.c_pointerHandleAxis.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_wl_init.c_pointerHandleAxis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }
%struct.wl_pointer = type { i32 }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@WL_POINTER_AXIS_HORIZONTAL_SCROLL = common dso_local global i64 0, align 8
@WL_POINTER_AXIS_VERTICAL_SCROLL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_pointer*, i64, i64, i32)* @pointerHandleAxis to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pointerHandleAxis(i8* %0, %struct.wl_pointer* %1, i64 %2, i64 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca %struct.wl_pointer*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca double, align 8
  %13 = alloca double, align 8
  %14 = alloca double, align 8
  store i8* %0, i8** %6, align 8
  store %struct.wl_pointer* %1, %struct.wl_pointer** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %15 = load i32*, i32** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 8
  store i32* %15, i32** %11, align 8
  store double 0.000000e+00, double* %12, align 8
  store double 0.000000e+00, double* %13, align 8
  store double 1.000000e-01, double* %14, align 8
  %16 = load i32*, i32** %11, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %5
  br label %52

19:                                               ; preds = %5
  %20 = load i64, i64* %9, align 8
  %21 = load i64, i64* @WL_POINTER_AXIS_HORIZONTAL_SCROLL, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %27, label %23

23:                                               ; preds = %19
  %24 = load i64, i64* %9, align 8
  %25 = load i64, i64* @WL_POINTER_AXIS_VERTICAL_SCROLL, align 8
  %26 = icmp eq i64 %24, %25
  br label %27

27:                                               ; preds = %23, %19
  %28 = phi i1 [ true, %19 ], [ %26, %23 ]
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  %31 = load i64, i64* %9, align 8
  %32 = load i64, i64* @WL_POINTER_AXIS_HORIZONTAL_SCROLL, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %38

34:                                               ; preds = %27
  %35 = load i32, i32* %10, align 4
  %36 = call double @wl_fixed_to_double(i32 %35)
  %37 = fmul double %36, 1.000000e-01
  store double %37, double* %12, align 8
  br label %47

38:                                               ; preds = %27
  %39 = load i64, i64* %9, align 8
  %40 = load i64, i64* @WL_POINTER_AXIS_VERTICAL_SCROLL, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %46

42:                                               ; preds = %38
  %43 = load i32, i32* %10, align 4
  %44 = call double @wl_fixed_to_double(i32 %43)
  %45 = fmul double %44, 1.000000e-01
  store double %45, double* %13, align 8
  br label %46

46:                                               ; preds = %42, %38
  br label %47

47:                                               ; preds = %46, %34
  %48 = load i32*, i32** %11, align 8
  %49 = load double, double* %12, align 8
  %50 = load double, double* %13, align 8
  %51 = call i32 @_glfwInputScroll(i32* %48, double %49, double %50)
  br label %52

52:                                               ; preds = %47, %18
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local double @wl_fixed_to_double(i32) #1

declare dso_local i32 @_glfwInputScroll(i32*, double, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
